--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
         "php": ">=8.3.11",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/core": "^4.0",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "^4.12",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
         "runtime/frankenphp-symfony": "^0.2.0",
