configuration installation api-platform and JWT authorize

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@
 
 node_modules/*
 /docker/db/data/*
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
