--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
             *.cache-to=type=gha,scope=${{github.ref}},mode=max
       -
         name: Start services
+        if: false # Remove this line when the homepage will be configured
         run: docker compose up --wait --no-build
       -
         name: Check HTTP reachability
