--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-###> nelmio/cors-bundle ###
+###> nelmio/cors-bundle ###²
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
