--- a/composer.json
+++ b/composer.json
@@ -107,7 +107,14 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
+        "codeception/codeception": "^5.1",
+        "codeception/module-asserts": "^3.0",
+        "codeception/module-db": "^3.1",
+        "codeception/module-doctrine": "^3.1",
+        "codeception/module-phpbrowser": "^3.0",
+        "codeception/module-symfony": "^3.5",
+        "codeception/module-webdriver": "^4.0",
+        "phpunit/phpunit": "^10.0.0",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
         "symfony/debug-bundle": "7.1.*",
