--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
     "@dbml/cli": "^3.9.0",
-    "bootstrap": "^5.3.3"
+    "@popperjs/core": "^2.11.8",
+    "@vue/compiler-sfc": "^3.5.13",
+    "bootstrap": "^5.3.3",
+    "stimulus": "^3.2.2",
+    "vue": "^3.5.13",
+    "vue-loader": "^17.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@symfony/webpack-encore": "^5.0.1",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
