--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,15 @@
 ###< symfony/asset-mapper ###
 
 node_modules/*
-docker/*
+/docker/
 
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
