--- a/package.json
+++ b/package.json
@@ -1,6 +1,38 @@
 {
+  "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@popperjs/core": "^2.11.8",
+    "@symfony/stimulus-bridge": "^3.2.2",
+    "@symfony/webpack-encore": "^4.6.1",
+    "autoprefixer": "^10.4.19",
+    "core-js": "^3.23.0",
+    "css-loader": "^7.1.2",
+    "postcss-loader": "^7.3.4",
+    "regenerator-runtime": "^0.13.9",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "vue-loader": "^17.4.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-notifier": "^1.15.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
+  },
   "dependencies": {
     "@dbml/cli": "^3.9.0",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "datatables.net": "^2.1.8",
+    "datatables.net-bs5": "^2.1.8",
+    "jquery": "^3.7.1",
+    "vue": "^3.5.13"
   }
 }
