front page badge

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.16.0",
-    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "@symfony/stimulus-bridge": "^3.2.2",
     "@symfony/webpack-encore": "^4.6.1",
@@ -28,10 +28,16 @@
     "build": "encore production --progress"
   },
   "dependencies": {
-    "@dbml/cli": "^3.9.0",
+    "@dbml/cli": "^3.7.4",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "admin-lte": "^4.0.0-beta3",
     "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.3.12",
     "datatables.net": "^2.1.8",
     "datatables.net-bs5": "^2.1.8",
+    "flag-icons": "^7.3.2",
+    "flowbite-vue": "^0.1.7",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "vue": "^3.5.13"
   }
