--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_DEBUG=1
 APP_SECRET=2c579fe4dcaae178d1456e4e895dd7fb
 ###< symfony/framework-bundle ###
