--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "admin-lte": "^4.0.0-beta3",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-3": "^0.3.12",
-    "datatables.net": "^2.1.8",
+    "datatables.net": "^2.2.2",
     "datatables.net-bs5": "^2.1.8",
+    "datatables.net-dt": "^2.2.2",
     "flag-icons": "^7.3.2",
     "flowbite-vue": "^0.1.7",
     "font-awesome": "^4.7.0",
