--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "^2.11.8",
     "@symfony/stimulus-bridge": "^3.2.2",
-    "@symfony/webpack-encore": "^4.6.1",
+    "@symfony/webpack-encore": "^5.1.0",
     "autoprefixer": "^10.4.19",
     "core-js": "^3.23.0",
     "css-loader": "^7.1.2",
@@ -40,6 +40,8 @@
     "flowbite-vue": "^0.1.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
+    "vuex": "^4.0.2"
   }
 }
